--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "bitandbang",
   "version": "2.1.1",
-  "description": "A personal card for Tierney Cyren (@bitandbang)",
+  "description": "A personal card for Murali Prasanth (@gitmurali)",
   "main": "/bin/card.js",
   "bin": {
-    "bitandbang": "./bin/card.js"
+    "murali": "./bin/card.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bnb/bitandbang.git"
+    "url": "git+https://github.com/gitmurali/murali.git"
   },
-  "homepage": "https://bnb.im",
+  "homepage": "https://muraliprashanth.me",
   "scripts": {
     "prepublish": "npm run build",
     "build": "node build.js",
@@ -25,7 +25,7 @@
     "npx card",
     "business card"
   ],
-  "author": "Tierney Cyren <hello@bnb.im> (http://bnb.im)",
+  "author": "Murali Prashanth <info@muraliprashanth.me> (http://muraliprashanth.me)",
   "license": "MIT",
   "files": [
     "bin/card.js",
@@ -37,7 +37,7 @@
     "standard": "^12.0.1"
   },
   "bugs": {
-    "url": "https://github.com/bnb/bitandbang/issues"
+    "url": "https://github.com/gitmurali/murali/issues"
   },
   "dependencies": {}
 }
