--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bitandbang",
+  "name": "murali",
   "version": "2.1.1",
   "description": "A personal card for Murali Prasanth (@gitmurali)",
   "main": "/bin/card.js",
