--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "murali",
+  "name": "gomurali",
   "version": "1.0.0",
   "description": "A personal card for Murali Prasanth (@gitmurali)",
   "main": "/bin/card.js",
   "bin": {
-    "murali": "./bin/card.js"
+    "gomurali": "./bin/card.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,7 @@
     "npx card",
     "business card"
   ],
-  "author": "Murali Prashanth <info@muraliprashanth.me> (http://muraliprashanth.me)",
+  "author": "Murali Nutalapati <info@muraliprashanth.me> (http://muraliprashanth.me)",
   "license": "MIT",
   "files": [
     "bin/card.js",
